# csv-from-mbox

./: .gitignore  README.md  main.py  main2.py  main3.py  pyproject.toml
output/: emails.csv
src/: mail-from-mbox.py
